Install-WorkClient. PathCopyCopy, Greenshot

--- a/Install-WorkClient/customizations/Greenshot.ini
+++ b/Install-WorkClient/customizations/Greenshot.ini
@@ -39,7 +39,7 @@ PlayCameraSound=False
 ; Show a notification from the systray when a capture is taken.
 ShowTrayNotification=True
 ; Output file path.
-OutputFilePath=c:\andreas\greenshot
+OutputFilePath=c:\ao\greenshot
 ; If the target file already exists True will make Greenshot always overwrite and False will display a 'Save-As' dialog.
 OutputFileAllowOverwrite=True
 ; Filename pattern for screenshot.
@@ -53,9 +53,9 @@ OutputFileAutoReduceColors=False
 ; Amount of colors to reduce to, when reducing
 OutputFileReduceColorsTo=256
 ; When saving a screenshot, copy the path to the clipboard?
-OutputFileCopyPathToClipboard=True
+OutputFileCopyPathToClipboard=False
 ; SaveAs Full path?
-OutputFileAsFullpath=C:\Users\aos019\Desktop\dummy.png
+OutputFileAsFullpath=c:\ao\greenshot\2018-04-30 10_31_38-Client Certificates - Infor ION Grid Management Pages.png
 ; JPEG file save quality in %.
 OutputFileJpegQuality=80
 ; Ask for the quality before saving?
@@ -103,9 +103,9 @@ ExcludePlugins=
 ; Comma separated list of destinations which should be disabled.
 ExcludeDestinations=
 ; How many days between every update check? (0=no checks)
-UpdateCheckInterval=14
+UpdateCheckInterval=0
 ; Last update check
-LastUpdateCheck=
+LastUpdateCheck=04/18/2018 15:47:02
 ; Enable/disable the access to the settings, can only be changed manually in this .ini
 DisableSettings=False
 ; Enable/disable the access to the quick settings, can only be changed manually in this .ini
@@ -169,7 +169,7 @@ LastSaveWithVersion=1.2.10.6
 ; When reading images from files or clipboard, use the EXIF information to correct the orientation
 ProcessEXIFOrientation=True
 ; The last used region, for reuse in the capture last region
-LastCapturedRegion=597, 212, 377, 317
+LastCapturedRegion=538, 121, 838, 522
 ; The capture is cropped with these settings, e.g. when you don't want to color around it -1,-1
 Win10BorderCrop=0, 0
 ; Defines the size of the icons (e.g. for the buttons in the editor), default value 16,16 anything bigger will cause scaling
@@ -178,27 +178,6 @@ IconSize=16, 16
 WebRequestTimeout=100
 ; The read/write timeout value for webrequets, these are seconds
 WebRequestReadWriteTimeout=100
-
-; Greenshot Confluence Plugin configuration
-[Confluence]
-; Url to Confluence system, including wsdl.
-Url=http://confluence
-; Session timeout in minutes
-Timeout=30
-; What file type to use for uploading
-UploadFormat=png
-; JPEG file save quality in %.
-UploadJpegQuality=80
-; Reduce color amount of the uploaded image to 256
-UploadReduceColors=False
-; Open the page where the picture is uploaded after upload
-OpenPageAfterUpload=True
-; Copy the Wikimarkup for the recently uploaded image to the Clipboard
-CopyWikiMarkupForImageToClipboard=True
-; Key of last space that was searched for
-SearchSpaceKey=
-; Include personal spaces in the search & browse spaces list
-IncludePersonSpaces=False
 
 ; Greenshot ExternalCommand Plugin configuration
 [ExternalCommand]
@@ -230,18 +209,22 @@ DeletedBuildInCommands=
 ; Last used colors
 RecentColors=
 ; Field values, make sure the last used settings are re-used
+LastFieldValue.RectangleContainer.LINE_THICKNESS=System.Int32,mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089:5
+LastFieldValue.RectangleContainer.LINE_COLOR=System.Drawing.Color,System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a:Red
+LastFieldValue.RectangleContainer.FILL_COLOR=System.Drawing.Color,System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a:Transparent
+LastFieldValue.RectangleContainer.SHADOW=System.Boolean,mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089:True
 ; Match the editor window size to the capture
-MatchSizeToCapture=True
+MatchSizeToCapture=False
 ; Placement flags
 WindowPlacementFlags=0
 ; Show command
-WindowShowCommand=Normal
+WindowShowCommand=ShowMinimized
 ; Position of minimized window
-WindowMinPosition=-1, -1
+WindowMinPosition=-32000, -32000
 ; Position of maximized window
 WindowMaxPosition=-1, -1
 ; Position of normal window
-WindowNormalPosition=100, 100, 400, 400
+WindowNormalPosition=569, 139, 400, 400
 ; Reuse already open editor
 ReuseEditor=False
 ; The smaller this number, the less smoothing is used. Decrease for detailed drawing, e.g. when using a pen. Increase for smoother lines. e.g. when you want to draw a smooth line.
@@ -253,4 +236,17 @@ DropShadowEffectSettings=Darkness:0.60|ShadowSize:7|ShadowOffset:-1,-1
 ; Settings for the torn edge effect.
 TornEdgeEffectSettings=Darkness:0.60|ShadowSize:7|ShadowOffset:-1,-1|GenerateShadow:True|ToothHeight:12|HorizontalToothRange:20|VerticalToothRange:20|Edges:True,True,True,True
 
+
+; The section Confluence hasn't been 'claimed' since the last start of Greenshot, therefor it doesn't have additional information here!
+; The reason could be that the section Confluence just hasn't been used, a plugin has an error and can't claim it or maybe the whole section Confluence is obsolete.
+[Confluence]
+Url=http://confluence
+Timeout=30
+UploadFormat=png
+UploadJpegQuality=80
+UploadReduceColors=False
+OpenPageAfterUpload=True
+CopyWikiMarkupForImageToClipboard=True
+SearchSpaceKey=
+IncludePersonSpaces=False
 
